k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: avatar-catalog
  labels:
    app.kubernetes.io/part-of: avatar-catalog
